// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`oxlint2 CLI > should have UTF-16 spans in AST 1`] = `
"
  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
 2 | // £
   \`----
  help: Remove the debugger statement

  x utf16-plugin(no-debugger): Debugger at 0-9
   ,-[index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
 2 | // £
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[index.js:3:1]
 2 | // £
 3 | debugger;
   : ^^^^^^^^^
 4 | // 🤨
   \`----
  help: Remove the debugger statement

  x utf16-plugin(no-debugger): Debugger at 15-24
   ,-[index.js:3:1]
 2 | // £
 3 | debugger;
   : ^^^^^^^^^
 4 | // 🤨
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[index.js:6:3]
 5 | {
 6 |   debugger;
   :   ^^^^^^^^^
 7 | }
   \`----
  help: Remove the debugger statement

  x utf16-plugin(no-debugger): Debugger at 35-44
   ,-[index.js:6:3]
 5 | {
 6 |   debugger;
   :   ^^^^^^^^^
 7 | }
   \`----

Found 3 warnings and 3 errors.
Finished in Xms on 1 file using X threads."
`;

exports[`oxlint2 CLI > should lint a directory with errors 1`] = `
"
  x ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

Found 0 warnings and 1 error.
Finished in Xms on 1 file using X threads."
`;

exports[`oxlint2 CLI > should lint a directory without errors 1`] = `
"Found 0 warnings and 0 errors.
Finished in Xms on 1 file using X threads."
`;

exports[`oxlint2 CLI > should load a custom plugin 1`] = `
"
  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

Found 1 warning and 1 error.
Finished in Xms on 1 file using X threads."
`;

exports[`oxlint2 CLI > should load a custom plugin when configured in overrides 1`] = `
"
  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

Found 1 warning and 1 error.
Finished in Xms on 1 file using X threads."
`;

exports[`oxlint2 CLI > should load a custom plugin with multiple files 1`] = `
"
  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/01.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/01.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/02.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/02.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/03.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/03.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/04.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/04.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/05.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/05.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/06.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/06.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/07.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/07.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/08.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/08.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/09.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/09.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/10.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/10.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/11.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/11.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/12.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/12.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/13.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/13.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/14.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/14.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/15.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/15.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/16.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/16.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/17.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/17.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/18.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/18.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/19.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/19.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[files/20.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[files/20.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

Found 20 warnings and 20 errors.
Finished in Xms on 20 files using X threads."
`;

exports[`oxlint2 CLI > should receive data via \`context\` 1`] = `
"
  x context-plugin(log-context): id: context-plugin/log-context
   ,-[files/1.js:1:1]
 1 | let x;
   : ^
   \`----

  x context-plugin(log-context): filename: files/1.js
   ,-[files/1.js:1:1]
 1 | let x;
   : ^
   \`----

  x context-plugin(log-context): physicalFilename: files/1.js
   ,-[files/1.js:1:1]
 1 | let x;
   : ^
   \`----

  x context-plugin(log-context): id: context-plugin/log-context
   ,-[files/2.js:1:1]
 1 | let y;
   : ^
   \`----

  x context-plugin(log-context): filename: files/2.js
   ,-[files/2.js:1:1]
 1 | let y;
   : ^
   \`----

  x context-plugin(log-context): physicalFilename: files/2.js
   ,-[files/2.js:1:1]
 1 | let y;
   : ^
   \`----

Found 0 warnings and 6 errors.
Finished in Xms on 2 files using X threads."
`;

exports[`oxlint2 CLI > should report an error if a a rule is not found within a custom plugin (via overrides) 1`] = `
"Failed to build configuration.

  x Rule 'missing' not found in plugin 'basic-custom-plugin'
"
`;

exports[`oxlint2 CLI > should report an error if a custom plugin cannot be loaded 1`] = `
"Failed to parse configuration file.

  x Failed to load external plugin: ./test_plugin
  |   Cannot find module './test_plugin'
"
`;

exports[`oxlint2 CLI > should report an error if a rule is not found within a custom plugin 1`] = `
"Failed to parse configuration file.

  x Rule 'unknown-rule' not found in plugin 'basic-custom-plugin'
"
`;

exports[`oxlint2 CLI > should report the correct severity when using a custom plugin 1`] = `
"
  ! basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   \`----
  help: Remove the debugger statement

Found 2 warnings and 0 errors.
Finished in Xms on 1 file using X threads."
`;

exports[`oxlint2 CLI > should respect disable directives for custom plugin rules 1`] = `
"
  [38;2;244;191;117;1m⚠[0m [38;2;244;191;117;1meslint(no-unused-vars): Variable 'shouldError' is declared but never used. Unused variables should start with a '_'.[0m
   ╭─[[38;2;92;157;255;1mindex.js[0m:2:5]
 [2m1[0m │ // This var should trigger an error
 [2m2[0m │ var shouldError = 1;
   · [38;2;246;87;248m    ─────┬─────[0m
   ·          [38;2;246;87;248m╰── [38;2;246;87;248m'shouldError' is declared here[0m[0m
 [2m3[0m │ 
   ╰────
[38;2;106;159;181m  help: [0mConsider removing this declaration.

  [38;2;244;191;117;1m⚠[0m [38;2;244;191;117;1meslint(no-unused-vars): Variable 'shouldBeDisabled' is declared but never used. Unused variables should start with a '_'.[0m
   ╭─[[38;2;92;157;255;1mindex.js[0m:5:5]
 [2m4[0m │ // oxlint-disable-next-line no-var
 [2m5[0m │ var shouldBeDisabled = 2;
   · [38;2;246;87;248m    ────────┬───────[0m
   ·             [38;2;246;87;248m╰── [38;2;246;87;248m'shouldBeDisabled' is declared here[0m[0m
 [2m6[0m │ 
   ╰────
[38;2;106;159;181m  help: [0mConsider removing this declaration.

  [38;2;244;191;117;1m⚠[0m [38;2;244;191;117;1meslint(no-unused-vars): Variable 'anotherDisabled' is declared but never used. Unused variables should start with a '_'.[0m
    ╭─[[38;2;92;157;255;1mindex.js[0m:11:5]
 [2m10[0m │ /* oxlint-disable-next-line no-var */
 [2m11[0m │ var anotherDisabled = 4;
    · [38;2;246;87;248m    ───────┬───────[0m
    ·            [38;2;246;87;248m╰── [38;2;246;87;248m'anotherDisabled' is declared here[0m[0m
 [2m12[0m │ 
    ╰────
[38;2;106;159;181m  help: [0mConsider removing this declaration.

  [38;2;244;191;117;1m⚠[0m [38;2;244;191;117;1meslint(no-unused-vars): Variable 'shouldErrorAgain' is declared but never used. Unused variables should start with a '_'.[0m
    ╭─[[38;2;92;157;255;1mindex.js[0m:14:5]
 [2m13[0m │ // This var should trigger an error again
 [2m14[0m │ var shouldErrorAgain = 3;
    · [38;2;246;87;248m    ────────┬───────[0m
    ·             [38;2;246;87;248m╰── [38;2;246;87;248m'shouldErrorAgain' is declared here[0m[0m
    ╰────
[38;2;106;159;181m  help: [0mConsider removing this declaration.

  [38;2;225;80;80;1m×[0m [38;2;225;80;80;1mtest-plugin(no-var): Use let or const instead of var[0m
   ╭─[[38;2;92;157;255;1mindex.js[0m:2:1]
 [2m1[0m │ // This var should trigger an error
 [2m2[0m │ var shouldError = 1;
   · [38;2;246;87;248m────────────────────[0m
 [2m3[0m │ 
   ╰────

  [38;2;225;80;80;1m×[0m [38;2;225;80;80;1mtest-plugin(no-var): Use let or const instead of var[0m
    ╭─[[38;2;92;157;255;1mindex.js[0m:14:1]
 [2m13[0m │ // This var should trigger an error again
 [2m14[0m │ var shouldErrorAgain = 3;
    · [38;2;246;87;248m─────────────────────────[0m
    ╰────

Found 4 warnings and 2 errors.
Finished in Xms on 1 file using X threads."
`;

exports[`oxlint2 CLI > should work with multiple rules 1`] = `
"
  x basic-custom-plugin(no-debugger): Unexpected Debugger Statement
   ,-[index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
 2 | 
   \`----

  x basic-custom-plugin(no-debugger-2): Unexpected Debugger Statement
   ,-[index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
 2 | 
   \`----

  ! ]8;;https://oxc.rs/docs/guide/usage/linter/rules/eslint/no-debugger.html\\eslint(no-debugger)]8;;\\: \`debugger\` statement is not allowed
   ,-[index.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
 2 | 
   \`----
  help: Remove the debugger statement

  x basic-custom-plugin(no-ident-references-named-foo): Unexpected Identifier Reference named foo
   ,-[index.js:3:1]
 2 | 
 3 | foo;
   : ^^^
   \`----

Found 1 warning and 3 errors.
Finished in Xms on 1 file using X threads."
`;
